--- a/notebooks/PySaDML - PRE_PROCESSING.ipynb
+++ b/notebooks/PySaDML - PRE_PROCESSING.ipynb
@@ -24,10 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26f26cf6-337c-46e4-aec8-d998f04e2b68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.3.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6adcaa4b",
    "metadata": {},
    "outputs": [],
@@ -88,12 +99,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7f628b41",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Structure du dossier\n",
+      "Le numéro de série du volume est 50DF-2547\n",
+      "C:\\USERS\\GUIDY\\DOCUMENTS\\GITHUB\\PYSADML\\DATA\\DEV_DATA\n",
+      "+---fan\n",
+      "¦   +---test\n",
+      "¦   +---train\n",
+      "+---pump\n",
+      "¦   +---test\n",
+      "¦   +---train\n",
+      "+---slider\n",
+      "¦   +---test\n",
+      "¦   +---train\n",
+      "+---ToyCar\n",
+      "¦   +---test\n",
+      "¦   +---train\n",
+      "+---ToyConveyor\n",
+      "¦   +---test\n",
+      "¦   +---train\n",
+      "+---valve\n",
+      "    +---test\n",
+      "    +---train\n"
+     ]
+    }
+   ],
    "source": [
     "!tree ./{DATASET_AUDIO_PATH}"
    ]
@@ -108,12 +147,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bea373d9",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chargement du fichier <dev_data.csv> des métadonnées audio...\n",
+      "Terminé.\n",
+      "(30987, 11)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pathname</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>machine_id</th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>audio_format</th>\n",
+       "      <th>machine_type</th>\n",
+       "      <th>machine_kind</th>\n",
+       "      <th>data_split</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>durations</th>\n",
+       "      <th>samplingrate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28839</th>\n",
+       "      <td>..\\data\\dev_data\\ToyConveyor\\train\\normal_id_0...</td>\n",
+       "      <td>normal_id_01_00000197.wav</td>\n",
+       "      <td>id_01</td>\n",
+       "      <td>00000197</td>\n",
+       "      <td>.wav</td>\n",
+       "      <td>ToyConveyor</td>\n",
+       "      <td>real_machine</td>\n",
+       "      <td>train</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>16000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21286</th>\n",
+       "      <td>..\\data\\dev_data\\valve\\train\\normal_id_00_0000...</td>\n",
+       "      <td>normal_id_00_00000313.wav</td>\n",
+       "      <td>id_00</td>\n",
+       "      <td>00000313</td>\n",
+       "      <td>.wav</td>\n",
+       "      <td>valve</td>\n",
+       "      <td>real_machine</td>\n",
+       "      <td>train</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>16000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23822</th>\n",
+       "      <td>..\\data\\dev_data\\fan\\test\\anomaly_id_00_000000...</td>\n",
+       "      <td>anomaly_id_00_00000032.wav</td>\n",
+       "      <td>id_00</td>\n",
+       "      <td>00000032</td>\n",
+       "      <td>.wav</td>\n",
+       "      <td>fan</td>\n",
+       "      <td>real_machine</td>\n",
+       "      <td>test</td>\n",
+       "      <td>anomaly</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>16000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2620</th>\n",
+       "      <td>..\\data\\dev_data\\pump\\train\\normal_id_04_00000...</td>\n",
+       "      <td>normal_id_04_00000447.wav</td>\n",
+       "      <td>id_04</td>\n",
+       "      <td>00000447</td>\n",
+       "      <td>.wav</td>\n",
+       "      <td>pump</td>\n",
+       "      <td>real_machine</td>\n",
+       "      <td>train</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>16000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22730</th>\n",
+       "      <td>..\\data\\dev_data\\ToyConveyor\\test\\anomaly_id_0...</td>\n",
+       "      <td>anomaly_id_03_00000152.wav</td>\n",
+       "      <td>id_03</td>\n",
+       "      <td>00000152</td>\n",
+       "      <td>.wav</td>\n",
+       "      <td>ToyConveyor</td>\n",
+       "      <td>real_machine</td>\n",
+       "      <td>test</td>\n",
+       "      <td>anomaly</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>16000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                pathname  \\\n",
+       "28839  ..\\data\\dev_data\\ToyConveyor\\train\\normal_id_0...   \n",
+       "21286  ..\\data\\dev_data\\valve\\train\\normal_id_00_0000...   \n",
+       "23822  ..\\data\\dev_data\\fan\\test\\anomaly_id_00_000000...   \n",
+       "2620   ..\\data\\dev_data\\pump\\train\\normal_id_04_00000...   \n",
+       "22730  ..\\data\\dev_data\\ToyConveyor\\test\\anomaly_id_0...   \n",
+       "\n",
+       "                         filename machine_id sample_id audio_format  \\\n",
+       "28839   normal_id_01_00000197.wav      id_01  00000197         .wav   \n",
+       "21286   normal_id_00_00000313.wav      id_00  00000313         .wav   \n",
+       "23822  anomaly_id_00_00000032.wav      id_00  00000032         .wav   \n",
+       "2620    normal_id_04_00000447.wav      id_04  00000447         .wav   \n",
+       "22730  anomaly_id_03_00000152.wav      id_03  00000152         .wav   \n",
+       "\n",
+       "      machine_type  machine_kind data_split condition  durations  samplingrate  \n",
+       "28839  ToyConveyor  real_machine      train    normal       10.0         16000  \n",
+       "21286        valve  real_machine      train    normal       10.0         16000  \n",
+       "23822          fan  real_machine       test   anomaly       10.0         16000  \n",
+       "2620          pump  real_machine      train    normal       10.0         16000  \n",
+       "22730  ToyConveyor  real_machine       test   anomaly       10.0         16000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = common.load_metadata(DATASET_AUDIO_PATH, EXT)\n",
     "\n",
@@ -124,20 +309,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f019046a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ToyConveyor    6509\n",
+       "ToyCar         6459\n",
+       "fan            5550\n",
+       "pump           4205\n",
+       "valve          4170\n",
+       "slider         4094\n",
+       "Name: machine_type, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.machine_type.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "546f6dbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ToyCar', 'valve', 'slider', 'pump', 'ToyConveyor', 'fan'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_machine = df.machine_type.unique()\n",
     "list_machine"
@@ -153,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a27c3ee5",
    "metadata": {},
    "outputs": [],
@@ -184,10 +398,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35047c7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16000 4.0 32\n"
+     ]
+    }
+   ],
    "source": [
     "# trunc à true siginife que les audios seront tronqués de 1s\n",
     "trunc = True\n",
@@ -230,10 +452,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d41ee4f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7cff6db0cdbc416d93c22eaae00d2b6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine ToyCar:   0%|          | 0/6459 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:26s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 2459 \t\t\t Train split: 4000\n",
+      "\ttest_data shape: (2459, 40, 32) \t train_data shape: (4000, 40, 32)\n",
+      "\ttest_labels shape: (2459,) \t\t train_labels shape: (4000,)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "057c7311d361420d9f44c10061276c46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine valve:   0%|          | 0/4170 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:17s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 879 \t\t\t Train split: 3291\n",
+      "\ttest_data shape: (879, 40, 32) \t train_data shape: (3291, 40, 32)\n",
+      "\ttest_labels shape: (879,) \t\t train_labels shape: (3291,)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90a336f151b1455585dc5d534b6432b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine slider:   0%|          | 0/4094 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:18s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 1290 \t\t\t Train split: 2804\n",
+      "\ttest_data shape: (1290, 40, 32) \t train_data shape: (2804, 40, 32)\n",
+      "\ttest_labels shape: (1290,) \t\t train_labels shape: (2804,)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a840f76b8fee44c988b4bacd472c30f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine pump:   0%|          | 0/4205 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:17s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 856 \t\t\t Train split: 3349\n",
+      "\ttest_data shape: (856, 40, 32) \t train_data shape: (3349, 40, 32)\n",
+      "\ttest_labels shape: (856,) \t\t train_labels shape: (3349,)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f48a89312224cabafaed0c909498445",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine ToyConveyor:   0%|          | 0/6509 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:26s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 3509 \t\t\t Train split: 3000\n",
+      "\ttest_data shape: (3509, 40, 32) \t train_data shape: (3000, 40, 32)\n",
+      "\ttest_labels shape: (3509,) \t\t train_labels shape: (3000,)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa146fbbf30847d1bb0d4508a28f8e76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC pour la machine fan:   0%|          | 0/5550 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:00:22s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 1875 \t\t\t Train split: 3675\n",
+      "\ttest_data shape: (1875, 40, 32) \t train_data shape: (3675, 40, 32)\n",
+      "\ttest_labels shape: (1875,) \t\t train_labels shape: (3675,)\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(list_machine)):\n",
     "    # Creating empty lists for MFCC bands and labels\n",
@@ -323,6 +696,13 @@
     "    print(\"\\ttest_data shape: {} \\t train_data shape: {}\".format(np.array(test_data).shape, np.array(train_data).shape))\n",
     "    print(\"\\ttest_labels shape: {} \\t\\t train_labels shape: {}\".format(np.array(test_labels).shape, np.array(train_labels).shape))\n",
     "    #----------------------------------------------------------------------------------\n",
+    "    #----------------------------------------------------------------------------------\n",
+    "    print(\"\\nNumber of Status: {}\".format(len(np.unique(np.array(test_labels_status)))))\n",
+    "    print(\"Conditions: {}\".format(np.unique(np.array(test_labels_status))))\n",
+    "    print(\"\\nNumber of machine type: {}\".format(len(np.unique(np.array(test_labels_type)))))\n",
+    "    print(\"Machine Type: {}\".format(np.unique(np.array(test_labels_type))))\n",
+    "    #----------------------------------------------------------------------------------\n",
+    "    #----------------------------------------------------------------------------------\n",
     "    del mfccs\n",
     "    del df_machine, status, data_split, file_path   \n",
     "    del test_data, train_data, test_labels, train_labels\n"
@@ -338,10 +718,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e0883372",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2865e3ded9a49c08f2fdcdd7343f74d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extraction des caractéristiques MFCC_trunc.npy:   0%|          | 0/30987 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La durée d'extraction est de: 0:35:48s\n",
+      "Sauvegarde des extractions MFCC en tableau numpy.\n",
+      "\tTest split: 10868 \t\t\t Train split: 20119\n",
+      "\ttest_data shape: (10868, 40, 32) \t train_data shape: (20119, 40, 32)\n",
+      "\ttest_labels_type shape: (10868,) \t\t train_labels_type shape: (20119,)\n",
+      "\ttest_labels_status shape: (10868,) \t\t train_labels_status shape: (20119,)\n",
+      "\n",
+      "Number of Status: 2\n",
+      "Conditions: ['anomaly' 'normal']\n",
+      "\n",
+      "Number of machine type: 6\n",
+      "Machine Type: ['ToyCar' 'ToyConveyor' 'fan' 'pump' 'slider' 'valve']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_data = []\n",
     "test_data = []\n",
@@ -547,6 +969,13 @@
     "    print(\"\\tTest split: {} \\t\\t\\t Train split: {}\".format(np.array(test_data).shape[0], np.array(train_data).shape[0]))\n",
     "    print(\"\\ttest_data shape: {} \\t train_data shape: {}\".format(np.array(test_data).shape, np.array(train_data).shape))\n",
     "    print(\"\\ttest_labels shape: {} \\t\\t train_labels shape: {}\".format(np.array(test_labels).shape, np.array(train_labels).shape))\n",
+    "    #----------------------------------------------------------------------------------\n",
+    "    #----------------------------------------------------------------------------------\n",
+    "    print(\"\\nNumber of Status: {}\".format(len(np.unique(np.array(test_labels_status)))))\n",
+    "    print(\"Conditions: {}\".format(np.unique(np.array(test_labels_status))))\n",
+    "    print(\"\\nNumber of machine type: {}\".format(len(np.unique(np.array(test_labels_type)))))\n",
+    "    print(\"Machine Type: {}\".format(np.unique(np.array(test_labels_type))))\n",
+    "    #----------------------------------------------------------------------------------\n",
     "    #----------------------------------------------------------------------------------\n",
     "    del mels\n",
     "    del df_machine, status, data_split, file_path   \n",
